--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <p class="description">
             This webpage is designed to showcase the locations of meteorological stations in Kazakhstan and the <strong>annual temperature and precipitation data</strong> for each station during the 1961-2014 period.<br><br>
 
-            <strong>Click on a marker to see graphs.</strong><br><br>
+            <strong style="color: red;">Click on a marker to see graphs.</strong><br><br>
 
             This project is part of doctoral research "Mapping the effects of climate change on the territory of Kazakhstan and modeling its future trends" conducted by Kalamkas Yessimkhanova, under the supervision of Dr. Matyas Gede at Eötvös Loránd University, Budapest.<br><br>
 
