--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                 var longitude = parseFloat(station.longitude);
 
                 // Dynamically generate image paths
-                var tempImage = `images/${stationName}_annual_temp_trend.png`;
-                var precipImage = `images/${stationName}_annual_precip_trend.png`;
+                var tempImage = `images/${stationName}_annual_Tmean.png`;
+                var precipImage = `images/${stationName}_annual_precip.png`;
 
                 // Log the image paths to check if they are correct
                 console.log("Temperature Image Path:", tempImage);
