--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <strong style="color: red;">Click on a marker to see graphs.</strong><br><br>
 
-            This project is part of doctoral research "Mapping the effects of climate change on the territory of Kazakhstan and modeling its future trends" conducted by Kalamkas Yessimkhanova, under the supervision of Dr. Matyas Gede at Eötvös Loránd University, Budapest.<br><br>
+            This project is part of doctoral research "Mapping the tendencies of climate change and its effects on the Köppen–Geiger classification – Case study on Kazakhstan" conducted by Kalamkas Yessimkhanova, under the supervision of Dr. Matyas Gede at Eötvös Loránd University, Budapest.<br><br>
 
             The data presented here were utilized for climate analysis and the production of Köppen climate maps for the region of Kazakhstan. Resources can be found on the GitHub platform: 
             <a href="https://github.com/yessimkhanova?tab=repositories" target="_blank">GitHub</a><br><br>
@@ -262,7 +262,7 @@
 
                         // Attach click event for "See temperature trends" link to open modal with your specific image
                         document.getElementById('viewTrend').onclick = function() {
-                            openModal('images/all_stations_annual_temp_trend_with_trendlines.png');
+                            openModal('images/annual_mean_temperatures_for_all_stations');
                         };
 
                         // Attach click events for temperature and precipitation images to open modal
