--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                         // Attach click event for "See temperature trends" link to open modal with your specific image
                         document.getElementById('viewTrend').onclick = function() {
-                            openModal('images/annual_mean_temperatures_for_all_stations');
+                            openModal('images/annual_mean_temperatures_for_all_stations.png');
                         };
 
                         // Attach click events for temperature and precipitation images to open modal
