--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annual Temperature and Precipitation for KZ Meteorological Stations</title>
     
-    <!-- Link to the Leaflet CSS and JS files -->
     <link rel="stylesheet" href="leaflet/leaflet.css" />
     <script src="leaflet/leaflet.js"></script>
-    
-    <!-- Load PapaParse to help parse CSV files in JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
     <style>
-        /* Ensure the map and the body take up the full screen */
+        /* Layout */
         body, html {
             height: 100%;
             margin: 0;
@@ -34,22 +31,20 @@
             transition: width 0.3s ease;
         }
 
-        /* Sidebar is hidden by default */
         #image-display {
             width: 0;
             height: 100%;
             overflow-y: auto;
             background-color: #f4f4f4;
-            padding: 0; /* Remove padding when hidden */
+            padding: 0;
             box-shadow: -2px 0 5px rgba(0,0,0,0.1);
             transition: width 0.3s ease;
             visibility: hidden;
         }
 
-        /* When visible, the sidebar takes up 30% of the screen and has padding */
         #image-display.visible {
             width: 30%;
-            padding: 50px; /* Add padding only when visible */
+            padding: 50px;
             visibility: visible;
         }
 
@@ -68,12 +63,12 @@
             top: 20px;
             left: 10%;
             transform: translateX(-50%);
-            max-width: 250px; /* Limit the width of the box */
-            background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent */
+            max-width: 250px;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 10px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000; /* Ensure it stays on top of the map */
+            z-index: 1000;
             text-align: center;
         }
 
@@ -93,16 +88,15 @@
             text-decoration: none;
         }
 
-        /* Modal styling */
         .modal {
-            display: none; 
+            display: none;
             position: fixed;
-            z-index: 1001; /* Above everything else */
+            z-index: 1001;
             left: 0;
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0,0,0,0.8); /* Dark background */
+            background-color: rgba(0,0,0,0.8);
             justify-content: center;
             align-items: center;
         }
@@ -137,40 +131,40 @@
             text-decoration: none;
             cursor: pointer;
         }
-
     </style>
 </head>
 <body>
-    <!-- Floating title and description box -->
     <div class="info-box">
         <p class="title">Annual Statistics</p>
         <p class="description">
-            This webpage is designed to showcase the locations of meteorological stations in Kazakhstan and the <strong>annual temperature and precipitation data</strong> for each station during the 1961-2014 period.<br><br>
+            This webpage is designed to showcase the locations of meteorological stations in Kazakhstan and the
+            <strong>annual temperature and precipitation data</strong> for each station during the 1961–2014 period.<br><br>
 
             <strong style="color: red;">Click on a marker to see graphs.</strong><br><br>
 
-            This project is part of doctoral research "Mapping the tendencies of climate change and its effects on the Köppen–Geiger classification – Case study on Kazakhstan" conducted by Kalamkas Yessimkhanova, under the supervision of Dr. Matyas Gede at Eötvös Loránd University, Budapest.<br><br>
+            This project is part of doctoral research
+            "Mapping the tendencies of climate change and its effects on the Köppen–Geiger classification – Case study on Kazakhstan"
+            conducted by Kalamkas Yessimkhanova, under the supervision of Dr. Matyas Gede at Eötvös Loránd University, Budapest.<br><br>
 
-            The data presented here were utilized for climate analysis and the production of Köppen climate maps for the region of Kazakhstan. Resources can be found on the GitHub platform: 
+            The data presented here were utilized for climate analysis and the production of Köppen climate maps for the region of Kazakhstan.
+            Resources can be found on the GitHub platform:
             <a href="https://github.com/yessimkhanova?tab=repositories" target="_blank">GitHub</a><br><br>
 
-            Meteorological stations data provided by the National Hydrometeorological Service of Kazakhstan. 
-            <a href="https://www.kazhydromet.kz/" target="_blank">https://www.kazhydromet.kz/</a>. Date accessed: [25.07.2023]
+            Meteorological stations data provided by the National Hydrometeorological Service of Kazakhstan.
+            <a href="https://www.kazhydromet.kz/" target="_blank">https://www.kazhydromet.kz/</a>.
+            Date accessed: [25.07.2023]
         </p>
     </div>
 
     <div id="container">
-        <!-- Map container -->
         <div id="map"></div>
 
-        <!-- Image display sidebar -->
         <div id="image-display">
             <h3>Station Data</h3>
             <p>Click on a marker to view images here</p>
         </div>
     </div>
 
-    <!-- Modal structure for image popup -->
     <div id="imageModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -179,15 +173,12 @@
     </div>
 
     <script>
-        // Initialize the map and set its view to a central point in Kazakhstan
-        var map = L.map('map').setView([48.0196, 66.9237], 5);
+         var map = L.map('map').setView([48.0196, 66.9237], 5);
 
-        // Add OpenStreetMap tile layer
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        // Default and highlighted icons
         var defaultIcon = L.icon({
             iconUrl: 'blue_marker.png',
             iconSize: [29, 33]
@@ -198,10 +189,9 @@
             iconSize: [30, 50]
         });
 
-        var currentHighlightedMarker = null; // To keep track of the currently highlighted marker
-        var isSidebarVisible = false; // Track sidebar visibility
+        var currentHighlightedMarker = null; 
+        var isSidebarVisible = false;
 
-        // Function to load and parse the CSV file
         function loadStations(csvUrl) {
             Papa.parse(csvUrl, {
                 download: true,
@@ -213,19 +203,16 @@
             });
         }
 
-        // Function to add markers to the map
         function addMarkersToMap(stations) {
             stations.forEach(function(station) {
-                var stationName = station.station_name;
+                var stationName = (station.station_name || '').trim();
+                var fileName    = stationName.replace(/_/g, '');
                 var displayName = stationName.replace(/_/g, ' ');
-                var latitude = parseFloat(station.latitude);
+                var tempImage   = `images/${fileName}_annual_Tmean.png`;
+                var precipImage = `images/${fileName}_annual_precip.png`;
+                var latitude  = parseFloat(station.latitude);
                 var longitude = parseFloat(station.longitude);
 
-                // Dynamically generate image paths
-                var tempImage = `images/${stationName}_annual_Tmean.png`;
-                var precipImage = `images/${stationName}_annual_precip.png`;
-
-                // Log the image paths to check if they are correct
                 console.log("Temperature Image Path:", tempImage);
                 console.log("Precipitation Image Path:", precipImage);
 
@@ -234,70 +221,71 @@
                     .on('click', function() {
                         var imageDisplay = document.getElementById('image-display');
 
-                        // Only adjust map size and shift the view if sidebar is not already visible
                         if (!isSidebarVisible) {
-                            imageDisplay.classList.add('visible'); // Show sidebar
-                            document.getElementById('map').style.width = '70%'; // Adjust map width
-                            map.invalidateSize(); // Ensure the map resizes properly
-
-                            // Shift map to the left to keep marker visible when sidebar opens
+                            imageDisplay.classList.add('visible');
+                            document.getElementById('map').style.width = '70%';
+                            map.invalidateSize();
                             map.panBy([100, 0], { animate: true });
-                            isSidebarVisible = true; // Sidebar is now visible and fixed
+                            isSidebarVisible = true;
                         }
 
-                        // Highlight the clicked marker
                         if (currentHighlightedMarker) {
-                            currentHighlightedMarker.setIcon(defaultIcon); // Reset previously highlighted marker
+                            currentHighlightedMarker.setIcon(defaultIcon);
                         }
-                        marker.setIcon(highlightedIcon); // Highlight the clicked marker
-                        currentHighlightedMarker = marker; // Update the current highlighted marker
+                        marker.setIcon(highlightedIcon);
+                        currentHighlightedMarker = marker;
 
-                        // Display the station name and images in the sidebar with link to open modal
                         imageDisplay.innerHTML = `
                             <h3><strong>Station Name:</strong> ${displayName}</h3>
-                            <img src="${tempImage}" id="tempImage" alt="Annual Temperature Trend" onerror="this.style.display='none'">
-                            <img src="${precipImage}" id="precipImage" alt="Annual Precipitation Trend" onerror="this.style.display='none'">
+                            <img src="${tempImage}" id="tempImage" alt="Annual Temperature Trend"
+                                 onerror="this.style.display='none'">
+                            <img src="${precipImage}" id="precipImage" alt="Annual Precipitation Trend"
+                                 onerror="this.style.display='none'">
                             <p><a href="#" id="viewTrend">See temperature trends</a></p>
                         `;
 
-                        // Attach click event for "See temperature trends" link to open modal with your specific image
-                        document.getElementById('viewTrend').onclick = function() {
+                        document.getElementById('viewTrend').onclick = function(e) {
+                            e.preventDefault();
                             openModal('images/annual_mean_temperatures_for_all_stations.jpg');
                         };
 
-                        // Attach click events for temperature and precipitation images to open modal
-                        document.getElementById('tempImage').onclick = function() {
-                            openModal(tempImage);
-                        };
+                        var tempImgEl = document.getElementById('tempImage');
+                        var precImgEl = document.getElementById('precipImage');
 
-                        document.getElementById('precipImage').onclick = function() {
-                            openModal(precipImage);
-                        };
+                        if (tempImgEl) {
+                            tempImgEl.onclick = function() {
+                                openModal(tempImage);
+                            };
+                        }
+
+                        if (precImgEl) {
+                            precImgEl.onclick = function() {
+                                openModal(precipImage);
+                            };
+                        }
                     });
             });
         }
 
-        // Modal handling
-        var modal = document.getElementById("imageModal");
+        var modal      = document.getElementById("imageModal");
         var modalImage = document.getElementById("modalImage");
         var closeModal = document.getElementsByClassName("close")[0];
 
         function openModal(imageSrc) {
             modalImage.src = imageSrc;
-            modal.style.display = "flex"; // Show the modal
+            modal.style.display = "flex";
         }
 
         closeModal.onclick = function() {
-            modal.style.display = "none"; // Hide the modal when close button is clicked
-        }
+            modal.style.display = "none";
+        };
 
         window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none"; // Hide the modal if background is clicked
+            if (event.target === modal) {
+                modal.style.display = "none";
             }
-        }
+        };
 
-        // Load the stations CSV and add markers to the map
         loadStations('data/kz_ms.csv');
     </script>
 </body>
