--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
     <style>
-        /* Layout */
-        body, html {
+      body, html {
             height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
@@ -89,7 +88,7 @@
         }
 
         .modal {
-            display: none;
+            display: none; 
             position: fixed;
             z-index: 1001;
             left: 0;
@@ -106,13 +105,15 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
-            max-width: 80%;
-            max-height: 80%;
+            max-width: 90%;
+            max-height: 90%;
+            overflow: auto;         
         }
-
+        
         .modal img {
-            max-width: 100%;
-            max-height: 100%;
+            display: block;
+            max-width: none;         
+            max-height: none;        
         }
 
         .close {
@@ -241,7 +242,7 @@
                                  onerror="this.style.display='none'">
                             <img src="${precipImage}" id="precipImage" alt="Annual Precipitation Trend"
                                  onerror="this.style.display='none'">
-                            <p><a href="#" id="viewTrend">See temperature trends</a></p>
+                            <p><a href="#" id="viewTrend">See all stations temperature</a></p>
                         `;
 
                         document.getElementById('viewTrend').onclick = function(e) {
